log-ping_gke/log-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-deployment-withvol
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: config
          configMap:
            name: cm-log-output
            items:
            - key: information.txt
              path: information.txt
      containers:
      - name: log-output
        image: chenoc/log-output-app:v9
        volumeMounts:
        - name: config
          mountPath: /etc/config
          readOnly: true
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
