log-ping_gke/ping-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-deployment
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
      - name: ping-pong
        image: chenoc/ping-pong-app:v7 
        imagePullPolicy: Always  
        ports:
        - containerPort: 8080
