log-ping_gke/log-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
spec:
  selector:
    app: log-output
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
